--- a/src/components/pages/Calendar.css
+++ b/src/components/pages/Calendar.css
@@ -14,7 +14,7 @@ button{
     color: #242424;
     border: 1px solid #242424;
 }
-
+/*
 .react-calendar { 
     width: 80%;
     background-color: #242424;
@@ -74,5 +74,4 @@ button{
     background: gray;
     color: #242424;
    }
-
-
+*/
