--- a/src/components/pages/ErrorPage.css
+++ b/src/components/pages/ErrorPage.css
@@ -1,5 +1,21 @@
+.errorPage-main{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .error-massage{
     position: absolute;
-    top: 200px;
-    left: 200px;
+    top: 250px;
+    font-size: 30px;
+    color: #000;
 }
+
+
