--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,18 +1,36 @@
 .calendar{
-    width: 400px;
+    position: fixed;
+    top: 200px;
+    width: 100%;
 
     border: 1px solid #000;
+    display: block;
+}
+
+.calendar-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 100px;
+
+    font-size: 30px;
+
+    background-color: white;
+}
+
+.body{
+
 }
 
 .week{
     display: flex;
     align-items: center;
     justify-content: center;
+
     width: 100%;
     height: 50px;
 }
-
-
 
 .day{
     position: relative;
@@ -30,6 +48,7 @@
 
 .selected{
     background-color: lightslategray;
+
     height: 100%;
     width: 100%;
 
@@ -40,6 +59,7 @@
 
 .today{
     background-color: lightblue;
+
     height: 100%;
     width: 100%;
 
@@ -50,6 +70,7 @@
 
 .before{
     color: gray;
+
     height: 100%;
     width: 100%;
 
@@ -69,21 +90,16 @@
     align-items: center;
 }
 
-.header{
-    display: flex;
-    justify-content: center;
-}
-
 .prev{
     position: absolute;
-    left: 3%;
+    left: 7%;
 
     cursor: pointer;
 }
 
 .next{
     position: absolute;
-    right: 3%;
+    right: 7%;
 
     cursor: pointer;
 }
