--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,7 +1,8 @@
 .calendar{
     position: fixed;
-    top: 200px;
-    width: 100%;
+
+    top: 150px;
+    width: 500px;
 
     border: 1px solid #000;
     display: block;
@@ -100,3 +101,27 @@
     cursor: pointer;
 }
 
+.weekdays{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.weekday{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 60px;
+    width: calc(100%/7);
+
+    border: 1px solid black;
+    background-color: white;
+}
+
+@media screen and (max-width: 960px) {
+    .calendar{
+        width: 100%;
+        left: 0px;
+    }
+}
