--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,4 +1,16 @@
+.calendar-background{
+    background-color: transparent;
+
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    display: none;
+}
+
 .calendar{
+    z-index: 5;
     display: none;
 
     position: fixed;
