--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -10,3 +10,10 @@
     display: flex;
     justify-content: center;
 }
+
+.hallo{
+    position: absolute;
+    bottom: 100px;
+    left: 100px;
+    z-index: 100;
+}
