--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -132,6 +132,31 @@
     background-color: white;
 }
 
+.button-container{
+    width: 100%;
+    height: 100%;
+
+    background-color: white;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.button{
+    height: 40px;
+    margin: 5px;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+}
+
+.select{
+    margin-left: 20%;
+}
+
+.delete{
+    margin-right: 20%;
+}
+
 @media screen and (max-width: 960px) {
     .calendar{
         width: 100%;
