--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -10,6 +10,8 @@
 }
 
 .calendar{
+background-color: white;
+
     z-index: 5;
     display: none;
 
@@ -128,7 +130,7 @@
     height: 60px;
     width: calc(100%/7);
 
-    border: 1px solid black;
+    border: 1px solid lightgrey;
     background-color: white;
 }
 
