--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -149,6 +149,18 @@ background-color: white;
     margin: 5px;
     padding-left: 2.5%;
     padding-right: 2.5%;
+    background-color: rgb(255, 246, 246);
+    border: 1px solid #000;
+    height: 100%;
+    color: black;
+    padding: 15px 32px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: lightslategray;
+    border: 1px solid lightgrey;
 }
 
 .select{
