--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,20 @@
+:root {
+  --primary: #fff;
+  --secondary: rgb(26, 23, 23);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
+
 }
 
 #root, body, html{
   width: 100%;
   height: 100%;
+
 }
 
 
