--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,6 @@
 :root {
     --primary: #fff;
+    --secondary: rgb(26, 23, 23);
   }
   
   .btn {
@@ -18,7 +19,7 @@
   
   .btn--outline {
     background-color: transparent;
-    color: #fff;
+    color: var(--primary);
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
@@ -37,7 +38,7 @@
   .btn--large:hover,
   .btn--medium:hover {
     transition: all 0.3s ease-out;
-    background: #fff;
+    background: var(--primary);
     color: #242424;
     transition: 250ms;
   }
