--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,10 @@
+:root {
+  --primary: #fff;
+  --secondary: rgb(26, 23, 23);
+}
+
 .navbar {
-  background: rgb(26, 23, 23);
+  background: var(--secondary);
   height: 80px;
   width: 100%;
   display: flex;
@@ -22,7 +27,7 @@
 .navbar-logo {
   position: absolute;
   left: 0px;
-  color: #fff;
+  color: var(--primary);
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
@@ -58,7 +63,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: var(--primary);
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -67,12 +72,12 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid var(--primary);
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #fff;
+  color: var(--primary);
 }
 
 .nav-links-mobile {
@@ -87,7 +92,7 @@
   padding: 10px;
 }
 .searchbar-container {
-  background-color: rgb(26, 23, 23);
+  background-color: var(--secondary);
   height: 80px;
   width: 40%;
 
@@ -110,10 +115,10 @@
 }
 
 .calendar-button {
-  background-color: rgb(26, 23, 23);
+  background-color: var(--secondary);
   height: 80px;
   border: none;
-  color: white;
+  color: var(--primary);
   padding: 15px 32px;
   font-size: 18px;
   cursor: pointer;
@@ -127,8 +132,8 @@
 
 @media screen and (min-width: 760px) {
   .calendar-button:hover{
-    background-color: #fff;
-    color: rgb(26, 23, 23);
+    background-color: var(--primary);
+    color: var(--secondary);
     transition: 250ms;
    }
 }
@@ -143,90 +148,6 @@
     position: absolute;
     top: 0px;
     right: 7%;
-  }
-
-  .NavbarItems {
-    position: relative;
-  }
-
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    top: 80px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav-menu.active {
-    background: #242222;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-
-  .nav-items {
-    position: static;
-  }
-
-  .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
-  .nav-links:hover {
-    background-color: #fff;
-    color: #242424;
-    border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: -11px;
-    left: -50px;
-    transform: translate(25%, 50%);
-  }
-
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  }
-
-  .fa-times {
-    color: #fff;
-    font-size: 2rem;
-  }
-
-  .nav-links-mobile {
-    display: block;
-    text-align: center;
-    margin: 2rem auto;
-    border-radius: 4px;
-    width: 80%;
-    text-decoration: none;
-    font-size: 1.5rem;
-    background-color: transparent;
-    color: #fff;
-    padding: 14px 20px;
-    border: 1px solid #fff;
-    transition: all 0.3s ease-out;
-  }
-
-  .nav-links-mobile:hover {
-    background: #fff;
-    color: #242424;
-    transition: 250ms;
   }
 }
 
