--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,5 +1,7 @@
 :root {
   --primary: #fff;
+  --secondary: rgb(26, 23, 23);
+  --tertiary: #242424
 }
 
 form{
@@ -10,7 +12,7 @@ form{
   transition: all 0.5s;
   width: 50px;
   height: 50px;
-  background: rgb(26, 23, 23);
+  background: var(--secondary);
   box-sizing: border-box;
   border-radius: 25px;
   padding: 5px;
@@ -55,7 +57,7 @@ form:hover input{
 
 form:hover .fa{
   background: var(--primary);
-  color: black;
+  color: var(--secondary);
 }
 
 @media screen and (max-width: 960px) {
@@ -67,7 +69,7 @@ form:hover .fa{
     transition: all 0.5s;
     width: 50px;
     height: 50px;
-    background: rgb(26, 23, 23);
+    background: var(--secondary);
     box-sizing: border-box;
     border-radius: 25px;
     padding: 5px;
@@ -83,7 +85,7 @@ form:hover input{
 
 form:hover .fa{
     background: var(--primary);
-    color: black;
+    color: var(--secondary);
 }
 }
   
