content abstände geändert

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -12,9 +12,12 @@
 
     border: var(--tertiary) 1px solid;
 
-    margin-top: 2%;
+    margin-top: 20px;
     text-decoration: none;
-    padding: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     height: 80px;
     width: 80vw;
