--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,23 @@
 :root {
-  --primary: rgb(255, 255, 254);
-  --secondary: rgb(26, 23, 23);
-  --tertiary: #242424
+  --primary: #fff;
+  --secondary: #1a1717;
+  --tertiary: #242424;
 }
+
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
+}
 
+#main{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: aqua;
 }
 
 #root, body, html{
