--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,16 +1,9 @@
-:root {
-  --primary: rgb(255, 255, 254);
-  --secondary: rgb(26, 23, 23);
-  --tertiary: #242424
-}
+@import url("../../main.css");
 
 .navbar {
   background: var(--secondary);
-  height: 80px;
+  height: 15%;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-size: 1.2rem;
   position: fixed;
   top: 0;
@@ -19,146 +12,87 @@
 
 .navbar-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  height: 80px;
-  width: 100%;
-}
-
-.navbar-logo {
-  position: absolute;
-  left: 0px;
-  color: var(--primary);
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-}
-
-.fa-typo3 {
-  margin-left: 0.5rem;
-  font-size: 1.8rem;
-}
-
-.nav-menu {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  list-style: none;
-  text-align: center;
-  width: 60vw;
-  justify-content: end;
-  margin-right: 2rem;
-}
-
-.nav-items {
-  position: absolute;
-  right: 8%;
-}
-
-.nav-item {
-  height: 80px;
-}
-
-.nav-links {
-  color: var(--primary);
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
+  flex-direction: row;
   height: 100%;
+  width: 100%;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
-.nav-links:hover {
-  border-bottom: 4px solid var(--primary);
-  transition: all 0.2s ease-out;
-}
-
-.fa-bars {
-  color: var(--primary);
-}
-
-.nav-links-mobile {
-  display: none;
-}
-
-.menu-icon {
-  display: none;
-}
-
-.fa-beer-mug-empty {
-  padding: 10px;
-}
-.searchbar-container {
-  background-color: var(--secondary);
-  height: 80px;
-  width: 40%;
-
+.nav-item{
   display: flex;
-  justify-content: center;
   align-items: center;
+  height: 100%;
+  text-decoration: none;
+  cursor: pointer;font-size: 1.5rem;
 
-  position: absolute;
-  margin-right: 40%;
-  z-index: 2;
 }
 
-.searchbar{
-  position: relative;
-  right: 0px;
-}
-
-.home-button{
-  display: none;
-}
-
-.calendar-button {
-  background-color: var(--secondary);
-  height: 80px;
-  border: none;
-  color: var(--primary);
-  padding: 15px 32px;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.navbar-logo:hover{
+.nav-item:hover{
   color: rgb(196, 30, 30);
 }
 
-.calendar-button-container {
-  position: absolute;
-  top: 0px;
-  right: 10%;
+#logo {
+  color: var(--primary);
+  font-size: 2rem;
 }
 
-@media screen and (min-width: 760px) {
-  .calendar-button:hover{
-    background-color: rgb(187, 233, 236);
-    color: var(--secondary);
-    transition: 250ms;
-   }
+#logo:hover{
+  color: rgb(196, 30, 30);
 }
 
-@media screen and (max-width: 960px) {
-  .searchbar {
-    z-index: 2;
+#filter{}
+
+#searchbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+#profile{}
+
+#cart{}
+
+#cards{
+}
+
+.menu-icon {
+  display: none; /* Initially hide the menu icon */
+  font-size: 24px;
+  cursor: pointer;
+  margin-left: auto; /* Pushes the menu icon to the right */
+}
+
+@media screen and (max-width: 1100px) {
+  .navbar-container {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  .calendar-button-container {
-    position: absolute;
-    top: 0px;
-    right: 7%;
+  .nav-item {
+    display: none; /* Hide all nav items */
   }
+
+  .menu-icon {
+    display: block; /* Show the menu icon */
+  }
+
+  #searchbar-container {
+    width: 100%;
+    justify-content: flex-start;
+  }
+  #searchbar {
+    width: calc(100% + 100%); /* Adjust width to take up full space minus padding */
+    justify-content: flex-start;
+  }
+
 }
 
-@media screen and (max-width: 600px) {
-  .calendar-button-container {
-    position: absolute;
-    top: 0px;
-    right: 0px;
+@media screen and (min-width: 1100px) {
+  .nav-item {
+    display: flex; /* Re-show the nav items */
   }
 }
