--- a/src/components/pages/homepage/Home.css
+++ b/src/components/pages/homepage/Home.css
@@ -1,19 +1,7 @@
 .home-page{
-    height: 100%;
+    height: 100vh;
     width: 100%;
-}
-
-.calendar-container{
-    height: 100%;
-    width: 100%;
-
+    background: rgb(255, 255, 25);
     display: flex;
     justify-content: center;
-}
-
-.hallo{
-    position: absolute;
-    bottom: 100px;
-    left: 100px;
-    z-index: 100;
 }
