--- a/src/components/NavBar/Searchbar.css
+++ b/src/components/NavBar/Searchbar.css
@@ -5,8 +5,9 @@
   border-radius: 4px;
   padding: 5px;
   width: 100%;
-  max-width: 600px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  min-width: 200px;
+  max-width: 900px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   position: relative; /* Add position for the menu */
 }
 
