--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #ffffff;
-    --secondary: #0ae7b6;
-    --tertiary: #ec2020;
-    --accent: #c41e1e;
+    --secondary: #3c3744;
+    --tertiary: #b4c5e4;
+    --accent: #d7263d;
 }
