--- a/src/components/NavBar/SearchResults.css
+++ b/src/components/NavBar/SearchResults.css
@@ -1,3 +1,5 @@
+@import url("../../main.css");
+
 .results-list{
     width: 100%;
     margin-top: 100px;
@@ -6,9 +8,9 @@
 .result{
     width: 100%;
     height: 80px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--secondary);
+    background: var(--tertiary);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: #ffff19;
 }
