--- a/src/components/NavBar/Searchbar.css
+++ b/src/components/NavBar/Searchbar.css
@@ -1,58 +1,46 @@
 @import url("../../main.css");
 
 .searchbar {
+  width: 100%; /* Take full width */
+  padding: 10px;
   display: flex;
   align-items: center;
-  background-color: var(--primary);
-  border-radius: 4px;
-  padding: 5px;
-  width: 100%;
-  min-width: 200px;
-  max-width: 900px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  position: relative; /* Add position for the menu */
+  border-radius: 8px;
 }
 
-.input-container {
-  flex: 1;
+.searchbar input[type="text"] {
+  width: 100%;
   padding: 10px;
-  background-color: var(--primary);
-  border-radius: 4px 0 0 4px;
+  border: 1px solid var(--tertiary); /* Tertiary color */
+  border-radius: 4px;
+  font-size: 16px;
+  color: var(--secondary); /* Secondary color */
+  transition: border-color 0.3s;
 }
 
-input[type="text"] {
-  width: 100%;
-  border: none;
-  background-color: transparent;
-  color: var(--secondary);
-  padding: 8px;
-  font-size: 14px;
+/* Input focus style */
+.searchbar input[type="text"]:focus {
+  border-color: var(--accent); /* Accent color on focus */
   outline: none;
 }
 
-.menu-icon {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
+/* Placeholder color */
+.searchbar input[type="text"]::placeholder {
+  color: var(--secondary); /* Secondary color */
+}
+
+.searchbar button {
+  background: var(--accent); /* Accent color */
+  color: var(--primary); /* Primary color */
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
   cursor: pointer;
+  font-size: 14px;
+  transition: background 0.3s, color 0.3s;
 }
 
-/* Media Query for Responsive Design */
-@media screen and (max-width: 480px) {
-  .searchbar {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .input-container {
-    border-radius: 4px; /* Adjust border radius for responsive layout */
-    margin-bottom: 5px;
-  }
-
-  .menu-icon {
-    top: 10px;
-    right: 10px;
-  }
+.searchbar button:hover {
+  background: var(--tertiary); /* Tertiary color */
+  color: var(--secondary); /* Secondary color */
 }
-
