--- a/src/components/NavBar/SearchResults.css
+++ b/src/components/NavBar/SearchResults.css
@@ -1,11 +1,12 @@
 @import url("../../main.css");
 
-.results-list{
+.results-list {
     width: 100%;
     margin-top: 100px;
 }
 
-.result{
+
+.result {
     width: 100%;
     height: 80px;
     border: 1px solid var(--secondary);
@@ -13,4 +14,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
 }
+
+.result:hover {
+    background: linear-gradient(to left, var(--tertiary), #9aa9c6);
+}
+
+
