--- a/src/components/pages/LoginPage/LoginPage.css
+++ b/src/components/pages/LoginPage/LoginPage.css
@@ -4,17 +4,49 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     width: 100%;
-    height: 100vh; /* Use viewport height for full-screen effect */
+    height: 100vh;
     background: linear-gradient(to bottom, var(--primary), var(--tertiary));
+}
+
+.register{
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: var(--primary);
+    max-width: 400px;
+    width: 80%;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: var(--secondary);
+    border: 1px solid var(--secondary);
+}
+
+
+.register:hover{
+    color: var(--secondary);
+    background: var(--tertiary);
+    cursor: pointer;
+
+}
+
+.error{
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .login-form {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: var(--primary); /* White background */
-    max-width: 400px; /* Limit form width for better readability */
+    background-color: var(--primary);
+    max-width: 400px; /* Increase the max-width */
+    width: 80%; /* Adjust the width */
+    margin-top: 80px;
 }
 
 .heading h2 {
@@ -31,22 +63,40 @@
     margin-bottom: 15px;
 }
 
+.input-heading {
+    display: flex;
+    align-items: center;
+}
+
+.forgot-password-link {
+    margin-left: auto; /* Push the link to the right side */
+    font-size: 14px;
+    color: var(--accent);
+    text-decoration: none;
+}
+
 .login-input {
     width: 100%;
     padding: 12px;
-    border: 1px solid var(--secondary); /* Use accent color */
+    border: 1px solid var(--secondary);
     border-radius: 6px;
     font-size: 16px;
     color: #555555;
 }
 
+.password-input {
+    display: flex;
+    align-items: center;
+}
+
 .button-container {
     display: flex;
     justify-content: center;
+    margin-top: 15px;
 }
 
 .login-button {
-    background: var(--accent); /* Use accent color */
+    background: var(--accent);
     color: var(--primary);
     border: none;
     padding: 12px 20px;
@@ -59,4 +109,37 @@
 .login-button:hover {
     background: var(--tertiary);
     color: var(--secondary);
+}
+
+.remember-me {
+    display: flex;
+    align-items: center;
+    margin-top: 7px;
+    margin-left: 3px;
+    font-size: 14px;
+    color: var(--secondary);
+    cursor: pointer; /* Add cursor pointer on hover */
+}
+
+.remember-me input {
+    margin-right: 5px;
+    cursor: pointer; /* Add cursor pointer on hover */
+}
+
+.remember-me-checkbox{
+    color: var(--accent);
+}
+
+.remember-me-container {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.remember-me-checkbox {
+    margin-right: 5px;
+}
+.remember-me-checkbox:checked + label::before {
+    background-color: red; /* Change the background color to red */
+    border-color: red; /* Change the border color to red */
 }
