--- a/src/components/pages/LoginPage/LoginPage.css
+++ b/src/components/pages/LoginPage/LoginPage.css
@@ -10,6 +10,38 @@
     background: linear-gradient(to bottom, var(--primary), var(--tertiary));
 }
 
+.send-container{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+.send-button{
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: var(--primary);
+    max-width: 400px;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: var(--accent);
+    border: 1px solid var(--accent);
+}
+
+.send-button:hover{
+    color: var(--secondary);
+    background: var(--tertiary);
+    cursor: pointer;
+    border: 1px solid var(--secondary);
+
+}
+
 .register{
     padding: 20px;
     border-radius: 10px;
@@ -139,6 +171,7 @@
 .remember-me-checkbox {
     margin-right: 5px;
 }
+
 .remember-me-checkbox:checked + label::before {
     background-color: red; /* Change the background color to red */
     border-color: red; /* Change the border color to red */
