--- a/src/components/SideMenus/Filter/FilterMenu.css
+++ b/src/components/SideMenus/Filter/FilterMenu.css
@@ -1,6 +1,6 @@
 .menu-button {
     position: fixed;
-    left: 0;
+    left: -5px;
     top: 50%;
     background-color: #333;
     color: #fff;
@@ -16,8 +16,12 @@
     align-items: center;
 }
 
+.menu-button:hover {
+    color: var(--accent);
+}
+
 .menu-button.menu-button-expanded {
-    left: 200px; /* Adjust the width of the menu */
+    left: 195px; /* Adjust the width of the menu */
 }
 
 .menu {
