--- a/src/components/SideMenus/MainMenu/MainMenu.css
+++ b/src/components/SideMenus/MainMenu/MainMenu.css
@@ -19,7 +19,7 @@
 
 .main-menu-button {
     position: fixed;
-    right: 0;
+    right: -5px;
     top: 50%;
     background-color: #333;
     color: #fff;
@@ -35,8 +35,12 @@
     align-items: center;
 }
 
+.main-menu-button:hover {
+    color: var(--accent);
+}
+
 .main-menu-button.main-menu-button-expanded {
-    right: 200px; /* Adjust the width of the menu */
+    right: 195px; /* Adjust the width of the menu */
 }
 
 .main-menu-item {
