--- a/src/components/SideMenus/FilterMenu/DateFilter.css
+++ b/src/components/SideMenus/FilterMenu/DateFilter.css
@@ -1,8 +1,8 @@
 .react-calendar {
     width: 350px;
     max-width: 100%;
-    background: white;
-    border: 1px solid #a0a096;
+    background: var(--secondary);
+    border-left: 1px solid black;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.125em;
 }
@@ -43,21 +43,23 @@
 .react-calendar__navigation {
     display: flex;
     height: 44px;
-    margin-bottom: 1em;
 }
 
 .react-calendar__navigation button {
     min-width: 44px;
     background: none;
+    color: var(--primary);
+    border-top: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .react-calendar__navigation button:disabled {
     background-color: #f0f0f0;
 }
 
-.react-calendar__navigation button:enabled:hover,
-.react-calendar__navigation button:enabled:focus {
-    background-color: #e6e6e6;
+.react-calendar__navigation button:enabled:hover{
+    background-color: var(--tertiary);
 }
 
 .react-calendar__month-view__weekdays {
@@ -65,10 +67,13 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.75em;
+    border-right: 1px solid black;
 }
 
 .react-calendar__month-view__weekdays__weekday {
-    padding: 0.5em;
+    padding: 1em;
+    color: var(--primary);
+    border-bottom: 1px solid black;
 }
 
 .react-calendar__month-view__weekNumbers .react-calendar__tile {
@@ -80,11 +85,16 @@
 }
 
 .react-calendar__month-view__days__day--weekend {
-    color: #d10000;
+    color: green;
+}
+
+.react-calendar__month-view__days {
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .react-calendar__month-view__days__day--neighboringMonth {
-    color: #757575;
+    color: dodgerblue;
 }
 
 .react-calendar__year-view .react-calendar__tile,
@@ -103,18 +113,10 @@
 
 
 
-.react-calendar__tile:enabled:hover{
-    background-color: #e6e6e6;
-}
 
-.react-calendar__tile--now {
-    background: #ffff76;
-}
 
-.react-calendar__tile--now:enabled:hover,
-.react-calendar__tile--now:enabled:focus {
-    background: #ffffa9;
-}
+
+
 
 .react-calendar__tile--hasActive {
     background: #76baff;
@@ -135,7 +137,21 @@
     background: #1087ff;
 }
 
+
+
+.react-calendar__tile:enabled:hover{
+    background-color: var(--accent);
+}
+
 .selected{
     background: #d7263d;
+}
+
+.not-selected{
+    background: var(--tertiary);
+}
+
+.react-calendar__tile--now {
+    background: #19d392;
 }
 
