--- a/src/components/SideMenus/FilterMenu/FilterMenu.css
+++ b/src/components/SideMenus/FilterMenu/FilterMenu.css
@@ -1,5 +1,5 @@
 :root{
-    --width-variable: 800px;
+    --width-variable: 400px;
 }
 
 .filter-menu-button {
@@ -52,6 +52,22 @@
     border-bottom: 1px solid #ddd;
     color: #333;
     transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.filter-menu-item-heading{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filter-menu-item-heading:hover {
+    color: var(--accent);
+    cursor: pointer;
 }
 
 .filter-menu-item:hover {
