--- a/src/components/NavBar/SearchResults.css
+++ b/src/components/NavBar/SearchResults.css
@@ -7,14 +7,17 @@
 
 
 .result {
-    width: 100%;
-    height: 80px;
+    width: calc(100% - 40px);
+    height: 120px;
     border: 1px solid var(--secondary);
+    margin-top: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
     background: var(--tertiary);
     display: flex;
     justify-content: space-around;
     align-items: center;
-
+    cursor: pointer;
 }
 
 .result:hover {
