--- a/src/components/pages/PartyPage/PartyPage.css
+++ b/src/components/pages/PartyPage/PartyPage.css
@@ -4,7 +4,50 @@
     justify-content: center;
 
     width: 100%;
-    height: 100%;
-    background: red
-;
+    height: calc(100% - 100px);
+    position: absolute;
+    top: 100px;
+}
+
+.party{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.party-data{
+    margin-right: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.party-poster{
+    margin-right: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+.party-image {
+    width: 100%; /* Set the desired width */
+    height: 400px; /* Set the desired height */
+}
+
+h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+h2{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 10px;
 }
