--- a/src/components/pages/MyPartiesPage/MyPartiesPage.css
+++ b/src/components/pages/MyPartiesPage/MyPartiesPage.css
@@ -4,12 +4,12 @@
     flex-direction: column;
 
     width: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
 }
 
 .party-display{
     width: 100%;
-    margin-top: 10px;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,11 +17,18 @@
 }
 
 .heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 16px;
     color: #333; /* Choose your preferred text color */
+
+    height: 17%;
+    width: 100%;
+    background: var(--primary);
     text-decoration: underline; /* Add an underline for emphasis */
+    position: fixed;
 }
 
 
